--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -210,7 +210,8 @@
         "레녹스": "リノックス",
         "로지": "ロッジ",
         "루크": "ルク",
-        "캐시": "キャッシー"
+        "캐시": "キャッシー",
+        "아델라": "アデラ"
     },
     "weapons": {
         "투척": "投げ", 
@@ -629,7 +630,8 @@
         "틴달로스의팔찌": "ティンダロスの腕輪",
         "고장난시계": "壊れた腕時計",
         "캐리비안장식총": "カリビアン装飾銃",
-        "해적의증표": "海賊の証票"
+        "해적의증표": "海賊の証票",
+        "요명월": "邀明月"
 
     },
     "skill": {
@@ -1133,6 +1135,28 @@
             "R": {
                 "name": "緊急手術",
                 "Detail": "持続効果：キャッシーが瀕死状態の味方を復活すると味方の最大体力を2/3/4秒間毎秒5%ずつ回復させるエリアを生成します。\n 指定した方向へ突進しながら範囲内の敵が失った体力に応じて120/200/280(+攻撃力の 60%)のダメージを与え、即時致命的外傷を付与します。(致命的外傷状態の敵には持続時間を更新します)\n ダメージ量は対象の失った体力に応じて300/500/700(+攻撃力の 150%)まで増加します。(敵の現在の体力が最大体力の25％の時に最大になります。)\n範囲内の味方は200(+攻撃力の60%)だけの体力を回復します。\n味方の体力が40％未満の場合は300(+攻撃力の90%)だけ体力を回復します。"
+            }
+        },
+        "아델라": {
+            "T": {
+                "name": "クイーンズ・ギャンビット・ディクラインド",
+                "Detail": "アデラは基本攻撃の射程距離が2.5m増加する代わりに攻撃速度が固定され、攻撃速度が0.01増加するたびに攻撃力が0.4増加します。\n 致命打確率は4/8/12%増加し、致命打が発動すると移動速度が2秒間 10/13/16%増加します。"
+            },
+            "Q": {
+                "name": "プロモーション",
+                "Detail": "アデラが指定した地点にポーンを配置して30/70/110/150/190(+攻撃力の 40%)のダメージを与えます。 \nポーンを使用するたびにスタックを獲得し、3スタックになると次のスキル使用時クイーンを配置して50/90/130/170/210(+攻撃力の 50%)のダメージを与え、1秒間気絶させます。\n プロモーションスキルを5秒内に再使用しない場合、スタックが初期化します。\n ポーンとクイーンは8秒間維持され、プロモーションはクールダウン減少の影響を受けません。"
+            },
+            "W": {
+                "name": "ナイトフォーク",
+                "Detail": "アデラが指定した地点にナイトを配置するとダメージを与えた後、再びジャンプして到着地点にそれぞれ45/90/135/180/225(+攻撃力の 30%)のダメージを与えます。\n 最初の着地時、5m内にポーン、クイーン、ルックがあるとナイトの着地地点の反対側に押し付け、それぞれ異なる効果を与えます。\n ポーンとクイーン:移動中、的に遭遇すると止まってプロモーション(Q)と同一なダメージをい与え、0.75秒間空中に浮かせます。\n ルック:移動して経路上の敵にキャスリング(E)と同じダメージを与え、空中に1.25秒間浮かせます。\n ナイトは8秒間維持され、を再び配置すると前のナイトは消えます。"
+            },
+            "E": {
+                "name": "キャスリング",
+                "Detail": "アデラが指定した位置にルックを突撃させるとアデラの位置から目標地点まで速い速度で移動し経路上の敵に65/110/155/200/245(+攻撃力の 50%)のダメージを与え、経路上にポーン、クイーン、ナイトがあれば即時被害効果を発動します。\n ポーンとクイーン : プロモーション(Q)と同一なダメージを与えます。\n ナイト : ナイトフォーク(W)と同じダメージを与え、移動速度を1秒間 30%減少します。\n 4秒内に12m 範囲内でスキルを再使用するとアデラとルックの位置が変更されます。\n ルックは8秒間維持され、ルックを再び配置すると前のルックは消えます。"
+            },
+            "R": {
+                "name": "チェックメイト",
+                "Detail": "アデラが空中に浮いて2秒間すべてのダメージを受けず、目標指定できない状態になった後、着地して範囲内の敵に150/200/250(+攻撃力の 60%)のダメージを与えます。\n スキルをキャストする時、配置した駒の数に応じて敵の最大体力の3%だけの固定ダメージを与えます。\n 着地する時、全てのチェス駒は被害効果を発動した後に消えます。"
             }
         },
 
