--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -209,7 +209,8 @@
         "레녹스": "레녹스",
         "로지": "로지",
         "루크": "루크",
-        "캐시": "캐시"
+        "캐시": "캐시",
+        "아델라": "아델라"
     },
     "weapons": {
         "투척": "투척", 
@@ -629,7 +630,8 @@
         "틴달로스의팔찌": "틴달로스의팔찌",
         "고장난시계": "고장난시계",
         "캐리비안장식총": "캐리비안장식총",
-        "해적의증표": "해적의증표"
+        "해적의증표": "해적의증표",
+        "요명월": "요명월"
     },
     "skill": {
         "아야": {
@@ -1136,6 +1138,28 @@
             "R": {
                 "name": "이머전시 OP",
                 "Detail": "기본 지속 효과: 캐시는 빈사 상태의 아군을 회복시키면 2/3/4초간 아군의 최대 체력을 초당 5%씩 회복시키는 영역을 생성합니다.\n 캐시가 지정한 방향으로 톱을 휘두르며 빠르게 이동하여, 범위 내의 적들에게 120/200/280(+공격력의 60%)의 피해를 입히며 즉시 치명적 외상을 부여합니다.\n 피해량은 대상의 잃은 체력에 따라 300/500/700(+공격력의 150%)까지 증가할 수 있습니다.\n (적 현재 체력이 최대 체력의 25%일 때 최대가 됩니다.)\n 범위 내의 아군들은 체력이 200(+공격력의 60%) 만큼 회복됩니다. 아군의 체력이 40% 미만이면 300(+공격력의 90%) 만큼 회복됩니다."
+            }
+        },
+        "아델라": {
+            "T": {
+                "name": "퀸즈 갬빗 디클라인드",
+                "Detail": "아델라는 기본 공격의 사정거리가 2.5m 증가하는 대신 공격 속도가 고정되고, 공격 속도가 0.01 증가하면 공격력이 0.4 증가합니다.\n 치명타 확률이 4/8/12% 증가하고, 치명타가 발동되면 이동속도가 2초 동안 10/13/16% 증가합니다."
+            },
+            "Q": {
+                "name": "프로모션",
+                "Detail": "아델라가 지정한 지점에 폰을 배치하여 30/70/110/150/190(+공격력의 40%)의 피해를 입힙니다.\n 폰을 사용할 때마다 스택이 쌓이고 3스택이 되면, 다음 스킬을 사용 할 때 퀸을 배치하여 50/90/130/170/210(+공격력의 50%)의 피해를 입히고, 1초 동안 기절시킵니다.\n 프로모션 스킬을 5초 안에 다시 사용하지 않으면, 스택이 초기화됩니다.\n 폰과 퀸은 8초 동안 유지되며, 프로모션은 쿨다운 감소의 영향을 받지 않습니다."
+            },
+            "W": {
+                "name": "나이트 포크",
+                "Detail": "아델라가 지정한 지점에 나이트를 배치 하면 피해를 입힌 후, 다시 점프하여 도착지점에 각각 45/90/135/180/225(+공격력의 30%)의 피해를 입힙니다.\n 첫 번째 착지 할 때 5m 안에 폰, 퀸, 룩이 있으면 착지점과 반대편으로 밀어내며 각각 다른 효과를 줍니다.\n 폰과 퀸 : 이동하다 적을 만나면 멈추고 프로모션(Q)과 동일한 피해를 주며 0.75초 동안 공중에 띄웁니다.\n 룩 : 이동하며 경로 상의 적들에게 캐슬링(E)과 동일한 피해를 입히고 1.25초 동안 공중에 띄웁니다.\n 나이트는 8초 동안 유지되며 나이트를 다시 배치하면 이전의 나이트는 즉시 사라집니다."
+            },
+            "E": {
+                "name": "캐슬링",
+                "Detail": "아델라가 지정한 지점에 룩을 돌격시켜 경로 상의 적들에게 65/110/155/200/245(+공격력의 50%)의 피해를 입히고, 경로상에 폰, 퀸, 나이트가 있으면 즉시 피해효과를 발동합니다.\n 폰과 퀸 : 프로모션(Q)과 동일한 피해를 입힙니다.\n 나이트 : 나이트 포크(W)와 동일한 피해를 입히고 이동속도를 1초 동안 30% 느려지게 합니다.\n 4초 이내에 12m 범위 안에서 스킬을 다시 사용하면 아델라와 룩의 위치가 변경됩니다.\n 룩은 8초 동안 유지되며 룩을 다시 배치하면 이전의 룩은 즉시 사라집니다."
+            },
+            "R": {
+                "name": "체크메이트",
+                "Detail": "아델라가 공중으로 떠올라 2초 동안 모든 피해를 받지 않고, 목표로 지정할 수 없는 상태가 되었다가 착지하며 범위 안의 적들에게 150/200/250(+공격력의 60%)의 피해를 입힙니다.\n 스킬을 시전할 때 배치한 말 하나당 적 최대 체력의 3%만큼 추가 피해를 입힙니다.\n 착지 할 때 모든 체스 말들은 피해효과를 발동하고 사라집니다."
             }
         },
 
