--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -210,7 +210,8 @@
         "로지": "로지",
         "루크": "루크",
         "캐시": "캐시",
-        "아델라": "아델라"
+        "아델라": "아델라",
+        "버니스": "버니스"
     },
     "weapons": {
         "투척": "투척", 
@@ -631,7 +632,11 @@
         "고장난시계": "고장난시계",
         "캐리비안장식총": "캐리비안장식총",
         "해적의증표": "해적의증표",
-        "요명월": "요명월"
+        "요명월": "요명월",
+        "타키온브레이스": "타키온브레이스",
+        "메스": "메스",
+        "스위스아미나이프": "스위스아미나이프",
+        "다마스커스가시": "다마스커스가시"
     },
     "skill": {
         "아야": {
@@ -1160,6 +1165,28 @@
             "R": {
                 "name": "체크메이트",
                 "Detail": "아델라가 공중으로 떠올라 2초 동안 모든 피해를 받지 않고, 목표로 지정할 수 없는 상태가 되었다가 착지하며 범위 안의 적들에게 150/200/250(+공격력의 60%)의 피해를 입힙니다.\n 스킬을 시전할 때 배치한 말 하나당 적 최대 체력의 3%만큼 추가 피해를 입힙니다.\n 착지 할 때 모든 체스 말들은 피해효과를 발동하고 사라집니다."
+            }
+        },
+        "버니스": {
+            "T": {
+                "name": "산탄",
+                "Detail": "버니스는 기본 공격을 할 때 2/3/4 개의 탄환을 발사하며, 기본 사정거리가 4m로 고정됩니다.\n 탄환은 적 대상에게 적중한 수에 비례하여 (+공격력의 70/80/90%) ~ (+공격력의 91/120/144%) 의 피해를 입힙니다.\n 스킬 레벨에 따라 재장전 시간이 빨라집니다."
+            },
+            "Q": {
+                "name": "레그샷",
+                "Detail": "버니스가 관통형 탄을 발사하여 70/110/150/190/230(+공격력의 70%)의 피해를 입히고, 3초 동안 이동속도를 10/15/20/25/30% 감소시킵니다.\n 속박이 걸린 적 대상에게는 100/140/180/220/260(+공격력의 70%)의 피해를 입히고, 3초 동안 이동속도를 30/40/50/60/70% 감소시킵니다."
+            },
+            "W": {
+                "name": "사냥 덫",
+                "Detail": "버니스가 20/25/30/35/40초 동안 유지되는 사냥 덫을 설치하여, 밟은 적 대상에게 3초 동안 20/30/40/50/60(+공격력의 10%)의 피해를 입히고 1.5초 동안 속박시킵니다.\n 사냥 덫은 최대 3/3/4/4/5개까지 보유할 수 있으며, 한 번에 2/2/3/3/4개를 설치할 수 있습니다."
+            },
+            "E": {
+                "name": "매의 눈",
+                "Detail": "지속 효과: 버니스는 사냥 덫에 걸린 적에게 4초 동안 지속되는 사냥 표식을 부여하여 대상자의 시야를 제공받으며, 대상자쪽으로 이동할 때 이동속도가 10/15/20/25/30% 증가합니다.\n 사냥 표식 대상자에게 기본 공격을 적중시키면 레그샷(Q)의 쿨다운을 0.5초, 올가미 탄(R)의 쿨다운이 1/1/1.5/1.5/2초 감소됩니다.\n 버니스의 매가 상공을 맴돌며 8초 동안 버니스의 시야를 3/3/3.5/3.5/4 증가시키고, 6초마다 근처의 적에게 4초 동안 지속되는 사냥 표식을 부여합니다."
+            },
+            "R": {
+                "name": "올가미 탄",
+                "Detail": "버니스가 지정한 방향으로 올가미 탄을 발사하여 적중한 대상에게 150/200/250(+공격력의 50%)의 피해를 입히고, 1.5초 동안 속박합니다.\n 올가미탄의 속박이 끝나면 폭발하여 속박 대상에게 100/150/200 (+공격력의 70%)의 피해를 입히고, 3m 범위 내의 가장 가까운 적 대상에게 전이되어 동일한 효과를 발동합니다.\n 올가미 탄은 최대 3번 전이 될 수 있습니다."
             }
         },
 
