--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -211,7 +211,8 @@
         "로지": "ロッジ",
         "루크": "ルク",
         "캐시": "キャッシー",
-        "아델라": "アデラ"
+        "아델라": "アデラ",
+        "버니스": "バニス"
     },
     "weapons": {
         "투척": "投げ", 
@@ -631,7 +632,11 @@
         "고장난시계": "壊れた腕時計",
         "캐리비안장식총": "カリビアン装飾銃",
         "해적의증표": "海賊の証票",
-        "요명월": "邀明月"
+        "요명월": "邀明月",
+        "타키온브레이스": "タキオンブレイス",
+        "메스": "メス",
+        "스위스아미나이프": " スイスアーミーナイフ",
+        "다마스커스가시": "ダマスカス鋼の棘"
 
     },
     "skill": {
@@ -1157,6 +1162,28 @@
             "R": {
                 "name": "チェックメイト",
                 "Detail": "アデラが空中に浮いて2秒間すべてのダメージを受けず、目標指定できない状態になった後、着地して範囲内の敵に150/200/250(+攻撃力の 60%)のダメージを与えます。\n スキルをキャストする時、配置した駒の数に応じて敵の最大体力の3%だけの固定ダメージを与えます。\n 着地する時、全てのチェス駒は被害効果を発動した後に消えます。"
+            }
+        },
+        "버니스": {
+            "T": {
+                "name": "散弾",
+                "Detail": "バニスは基本攻撃時2/3/4発の弾丸を発射し、基本射程距離が4mで固定されます。\n 弾丸は敵に命中した数に応じて(+攻撃力の 70/80/90%) ~ (+攻撃力の 91/120/144%) のダメージを与えます。\n スキルレベルに応じてリロード時間が短縮されます。"
+            },
+            "Q": {
+                "name": "レグショット",
+                "Detail": "バニスが貫通型弾丸を発射し、70/110/150/190/230(+攻撃力の 70%)のダメージを与え、3秒間移動速度を10/15/20/25/30%減少させます。\n 束縛状態の相手には100/140/180/220/260(+攻撃力の 70%)のダメージを与え、3秒間移動速度を 30/40/50/60/70%減少させます。"
+            },
+            "W": {
+                "name": "狩り罠",
+                "Detail": "バニスが20/25/30/35/40秒間維持される狩り罠を設置し、踏んだ敵に3秒間20/30/40/50/60(+攻撃力の 10%)のダメージを与え、1.5秒間束縛させます。\n 狩り罠は最大3/3/4/4/5個まで所持でき、2/2/3/3/4個まで設置できます。"
+            },
+            "E": {
+                "name": "鷹の目",
+                "Detail": "持続効果: バニスは狩り罠にかかった敵に4秒感持続される狩り刻印を付与して対象者の視界を提供されます。\n バニスが対象者の方に移動する時、移動速度が10/15/20/25/30% 増加します。\n 刻印対象者に基本攻撃を命中させるとレグショット(Q)のクールダウンを0.5秒、投げ縄弾(R)のクールダウン이 1/1/1.5/1.5/2秒減少します。\n バニスの鷹が上空を飛び、8秒間バニスの視界を 3/3/3.5/3.5/4 増加させ、6秒ごとに近所の敵に4秒間持続する狩り刻印を付与します。"
+            },
+            "R": {
+                "name": "投げ縄弾",
+                "Detail": "バニスが指定した方向へ投げ縄弾を発射し、命中した対象に150/200/250(+攻撃力の 50%)のダメージを与え、1.5秒間束縛します。\n 投げ縄弾の束縛後には爆発して束縛対象に100/150/200 (+攻撃力の 70%)のダメージを与え、3m範囲内の一番近い敵に転移され同じ効果を発動させます。\n 投げ縄弾は最大3回転移できます。"
             }
         },
 
