--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -212,7 +212,8 @@
         "루크": "ルク",
         "캐시": "キャッシー",
         "아델라": "アデラ",
-        "버니스": "バニス"
+        "버니스": "バニス",
+        "바바라": "バーバラ"
     },
     "weapons": {
         "투척": "投げ", 
@@ -636,7 +637,10 @@
         "타키온브레이스": "タキオンブレイス",
         "메스": "メス",
         "스위스아미나이프": " スイスアーミーナイフ",
-        "다마스커스가시": "ダマスカス鋼の棘"
+        "다마스커스가시": "ダマスカス鋼の棘",
+        "95식자동소총": "95式自動小銃",
+        "아그니": "アグニ",
+        "천사의고리": "エンジェルヘイロー"
 
     },
     "skill": {
@@ -1184,6 +1188,28 @@
             "R": {
                 "name": "投げ縄弾",
                 "Detail": "バニスが指定した方向へ投げ縄弾を発射し、命中した対象に150/200/250(+攻撃力の 50%)のダメージを与え、1.5秒間束縛します。\n 投げ縄弾の束縛後には爆発して束縛対象に100/150/200 (+攻撃力の 70%)のダメージを与え、3m範囲内の一番近い敵に転移され同じ効果を発動させます。\n 投げ縄弾は最大3回転移できます。"
+            }
+        },
+        "바바라": {
+            "T": {
+                "name": "散弾",
+                "Detail": "バーバラのレベルの応じて攻撃力の7.5%、防御力の4%だけセントリーガンが強化されます。\n セントリーガンがレールガンに的中したり、磁力ブラストを生成する度に攻撃速度が15/20/25%上昇し、最大3回重畳します。"
+            },
+            "Q": {
+                "name": "レグショット",
+                "Detail": "バーバラが指定した位置に150(+バーバラ最大体力の21/24/27/30/33%)の体力を持つセントリーガンを設置し範囲内の敵たちに15/30/45/60/75(+攻撃力の 15%)のダメージを与えます。\n セントリーガンは15秒間維持され、周りの敵に銃弾を発射し15(+バーバラレベルX バーバラ攻撃力の 7.5%)のダメージを与えます。\n セントリーガンが設置される時に前に設置したセントリーガンは壊れ、設置したセントリーガンがバーバラと離れるとセントリーガンを回収しクールダウンが50%減少します。"
+            },
+            "W": {
+                "name": "狩り罠",
+                "Detail": "バーバラが高出力砲身でイオンレーザーを2発発射して経路上の敵にそれぞれ40/80/120/160/200(+攻撃力の 35%)のダメージを与え、移動速度を1.5秒間 20% 減少させます。\n 2回の攻撃に命中した的には各レーザーダメージ量が35%減少し、オーバークロック(R)のクールダウンが1秒減少します。\n セントリーガンにレーザーが的中するとセントリーガンがチャージされ、敵にレールガンを発射して敵にレールガンを発射して敵に55/100/145/190/235(+セントリーガン攻撃力の50%)のダメージを与えます。"
+            },
+            "E": {
+                "name": "鷹の目",
+                "Detail": "バーバラが最大4秒間維持される磁力ブラストを自分とセントリーガンに生成して自分の移動速度を20% 増加させて範囲内の敵に0.5秒ごとに5/8/10/13/16(+攻撃力の 5%)(+敵最大体力の 1/1.5/2/2.5/3%)の固定ダメージを与えます。スキルを再使用したり、持続時間が終わると磁力ブラストは爆発して範囲内の敵に60/80/100/120/140(+攻撃力の 35%)のダメージを与え、磁力ブラストの維持時間の間与えたすべてのダメージ量の30%に該当するシールドを獲得します。シールドは最大、バーバラ最大体力の50%まで獲得できます。\n バーバラとセントリーガンの磁力ブラスト爆発ダメージを同時に受けた敵は0.75秒間気絶します。"
+            },
+            "R": {
+                "name": "投げ縄弾",
+                "Detail": "オーバークロックスキルを使用すると即時次のQ、W、Eスキルを使用でき、各スキルによって追加効果が発動します。\n ショートサーキット(Q) : バーバラがセントリーガンを設置し、該当位置へ瞬間移動します。既存のセントリーガンは自爆して50/75/100(+攻撃力の 40%)のダメージを与えます。 バーバラが瞬間移動した後、周りの敵に50/75/100(+攻撃力の 60%)のダメージを与え、4秒間ダメージを受けた敵の数に応じてセントリーガンの攻撃速度が10%上昇します。\n レーザーチャージ(W) : 7秒間レーザーチャージになり、持続時間の間イオンレーザー(W)とセントリーガンのレールガンダメージ量が 5/15/25%上昇します。セントリーガンはレーザーチャージ状態の間一般攻撃が強化されレールガンで攻撃します。イオンレーザー(W)のスタミナ消費量が消えクールダウンが97% 減少します。\n 超磁力ブラスト(E) : 磁力ブラスト範囲が維持時間の間次第に大きくなり、スキルを再使用したり4秒後範囲 内の敵に60/80/100/120/140(+攻撃力の 35%)のダメージと1.25秒間スターンを与え、磁力ブラストより追加で20/25/30%のシールドを獲得します。\n オーバークロックをもう一度使用すると強化状態をキャンセルして、3秒後また使用できます。"
             }
         },
 
