--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -211,7 +211,8 @@
         "루크": "루크",
         "캐시": "캐시",
         "아델라": "아델라",
-        "버니스": "버니스"
+        "버니스": "버니스",
+        "바바라": "바바라"
     },
     "weapons": {
         "투척": "투척", 
@@ -636,7 +637,10 @@
         "타키온브레이스": "타키온브레이스",
         "메스": "메스",
         "스위스아미나이프": "스위스아미나이프",
-        "다마스커스가시": "다마스커스가시"
+        "다마스커스가시": "다마스커스가시",
+        "95식자동소총": "95식자동소총",
+        "아그니": "아그니",
+        "천사의고리": "천사의고리"
     },
     "skill": {
         "아야": {
@@ -1189,6 +1193,29 @@
                 "Detail": "버니스가 지정한 방향으로 올가미 탄을 발사하여 적중한 대상에게 150/200/250(+공격력의 50%)의 피해를 입히고, 1.5초 동안 속박합니다.\n 올가미탄의 속박이 끝나면 폭발하여 속박 대상에게 100/150/200 (+공격력의 70%)의 피해를 입히고, 3m 범위 내의 가장 가까운 적 대상에게 전이되어 동일한 효과를 발동합니다.\n 올가미 탄은 최대 3번 전이 될 수 있습니다."
             }
         },
+        "바바라": {
+            "T": {
+                "name": "개조",
+                "Detail": "바바라 레벨에 비례하여 공격력의 7.5%, 방어력의 4%만큼 센트리건이 강화됩니다.\n 센트리건이 레일건에 적중하거나 자력 폭풍을 생성할 때마다 공격속도가 15/20/25% 상승하며, 최대 3번 중첩됩니다."
+            },
+            "Q": {
+                "name": "BT-Mk2 센트리건",
+                "Detail": "바바라가 지정한 위치에 150(+바바라 최대 체력의 21/24/27/30/33%)의 체력을 가진 센트리건을 설치하여 범위 안의 적들에게 15/30/45/60/75(+공격력의 15%)의 피해를 입힙니다.\n 센트리건은 15초 동안 유지하고 주위에 적에게 총알을 발사하여 15(+바바라 레벨 X 바바라 공격력의 7.5%)의 피해를 입힙니다.\n 센트리건이 설치될 때 전에 설치한 센트리건은 부서지며, 설치한 센트리건이 바바라와 멀어지면 센트리건을 회수하고 쿨다운이 50%감소합니다."
+            },
+            "W": {
+                "name": "이온 레이저",
+                "Detail": "바바라가 고출력 포신으로 이온 레이저를 두 발 발사하여 경로상의 적들에게 각각 40/80/120/160/200(+공격력의 35%)의 피해를 입히고, 이동속도를 1.5초 동안 20% 감소시킵니다.\n 두 발에 동시에 적중된 적에게는 각 레이저 피해량이 35%감소하고, 오버 클럭(R) 쿨다운이 1초 감소됩니다.\n 레이저가 적중하면 센트리건이 충전되고, 적에게 레일건을 발사하여 적들에게 55/100/145/190/235(+센트리건 공격력의 50%)의 피해를 입힙니다."
+            },
+            "E": {
+                "name": "자력 폭풍",
+                "Detail": "바바라가 최대 4초 동안 유지되는 자력폭풍을 자신과 센트리건에 함께 생성하여 자신의 이동속도를 20% 증가시키고 범위 안의 적들에게 0.5초 마다 5/8/10/13/16(+공격력의 5%)(+적 최대 체력의 1/1.5/2/2.5/3%)의 고정 피해를 입힙니다.\n 스킬을 다시 사용하거나, 지속시간이 끝나면 자력 폭풍은 폭발하며 범위 안의 적들에게 60/80/100/120/140(+공격력의 35%)의 피해를 입히고, 자력 폭풍이 유지한 동안 입힌 모든 피해량의 30%만큼 보호막을 획득합니다. 보호막은 바바라 최대 체력의 50% 까지 획득할 수 있습니다.\n 바바라와 센트리건의 자력 폭풍 폭발 피해를 동시에 받은 적은 0.75초 동안 기절합니다."
+            },
+            "R": {
+                "name": "오버 클럭",
+                "Detail": "오버 클럭 스킬을 사용하면 즉시 다음 Q, W, E 스킬을 사용할 수 있으며, 각 스킬에 따라 추가효과가 발동됩니다.\n 숏 서킷(Q) : 바바라가 센트리건을 설치하고 해당 위치로 순간이동합니다. 기존에 설치되어 있던 센트리건은 자폭하며 50/75/100(+공격력의 40%)의 피해를 입힙니다.\n 바바라가 순간이동 후, 주위에 적들에게 50/75/100(+공격력의 60%)의 피해를 입히며 4초 동안 피해를 입은 적 당 센트리건의 공격속도가 10% 상승합니다.\n 레이저 충전(W) : 7초동안 레이저 충전이 되며 지속 기간 동안 이온 레이저(W)와 센트리 건의 레일건 피해량이 5/15/25%상승합니다. 센트리건은 레이저 충전 상태동안 일반 공격이 강화되어 레일건으로 공격합니다. 이온 레이저(W)의 스태미너 소모량이 사라지고 쿨다운이 97% 감소합니다.\n 광자력 폭풍(E) : 자력 폭풍 범위가 유지시간 동안 점점 커지며, 스킬을 다시 사용하거나 4초 후 범위 내의 적들에게 60/80/100/120/140(+공격력의 35%)의 피해와 1.25초 동안 스턴을 주며, 자력 폭풍보다 추가로 20/25/30%의 보호막을 얻습니다.\n 오버 클럭은 한번 더 사용하면 초 강화 상태를 취소하고 3초 후 다시 시전할 수 있습니다."
+            }
+        },
+
 
         
         "단검": {
