프로 시즌 2 업데이트

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -15,6 +15,7 @@
     "weapon": "Weapon",
     "ranking": "Rank",
     "rank": "Rank",
+    "season": "Season",
     "avgRank": "avgRank",
     "item": "Item",
     "solo": "SOLO",
