--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -15,6 +15,7 @@
     "weapon": "Arma",
     "ranking": "Rank",
     "rank": "Rank",
+    "season": "Season",
     "avgRank": "RankMedio",
     "item": "Itens",
     "solo": "SOLO",
