--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -14,6 +14,7 @@
     "character": "캐릭터",
     "weapon": "무기",
     "ranking": "랭킹",
+    "season": "시즌",
     "rank": "순위",
     "avgRank": "평균순위",
     "item": "아이템",
