--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -15,7 +15,7 @@
     "weapon": "Weapon",
     "ranking": "Rank",
     "rank": "Rank",
-    "season": "Season",
+    "season": "S",
     "avgRank": "avgRank",
     "item": "Item",
     "solo": "SOLO",
