--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -15,7 +15,7 @@
     "weapon": "武器",
     "ranking": "排名",
     "rank": "排名",
-    "season": "Season",
+    "season": "S",
     "avgRank": "平均-排名",
     "item": "物品",
     "solo": "ソロ",
