--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -213,7 +213,8 @@
         "캐시": "캐시",
         "아델라": "아델라",
         "버니스": "버니스",
-        "바바라": "바바라"
+        "바바라": "바바라",
+        "알렉스": "알렉스"
     },
     "weapons": {
         "투척": "투척", 
@@ -641,7 +642,9 @@
         "다마스커스가시": "다마스커스가시",
         "95식자동소총": "95식자동소총",
         "아그니": "아그니",
-        "천사의고리": "천사의고리"
+        "천사의고리": "천사의고리",
+        "피스브링어": "피스브링어",
+        "케르베로스": "케르베로스"
     },
     "skill": {
         "아야": {
@@ -1214,6 +1217,28 @@
             "R": {
                 "name": "오버 클럭",
                 "Detail": "오버 클럭 스킬을 사용하면 즉시 다음 Q, W, E 스킬을 사용할 수 있으며, 각 스킬에 따라 추가효과가 발동됩니다.\n 숏 서킷(Q) : 바바라가 센트리건을 설치하고 해당 위치로 순간이동합니다. 기존에 설치되어 있던 센트리건은 자폭하며 50/75/100(+공격력의 40%)의 피해를 입힙니다.\n 바바라가 순간이동 후, 주위에 적들에게 50/75/100(+공격력의 60%)의 피해를 입히며 4초 동안 피해를 입은 적 당 센트리건의 공격속도가 10% 상승합니다.\n 레이저 충전(W) : 7초동안 레이저 충전이 되며 지속 기간 동안 이온 레이저(W)와 센트리 건의 레일건 피해량이 5/15/25%상승합니다. 센트리건은 레이저 충전 상태동안 일반 공격이 강화되어 레일건으로 공격합니다. 이온 레이저(W)의 스태미너 소모량이 사라지고 쿨다운이 97% 감소합니다.\n 광자력 폭풍(E) : 자력 폭풍 범위가 유지시간 동안 점점 커지며, 스킬을 다시 사용하거나 4초 후 범위 내의 적들에게 60/80/100/120/140(+공격력의 35%)의 피해와 1.25초 동안 스턴을 주며, 자력 폭풍보다 추가로 20/25/30%의 보호막을 얻습니다.\n 오버 클럭은 한번 더 사용하면 초 강화 상태를 취소하고 3초 후 다시 시전할 수 있습니다."
+            }
+        },
+        "알렉스": {
+            "T": {
+                "name": "잠입",
+                "Detail": "알렉스는 6레벨 부터 7초 동안 전투를 하지 않으면 잠입상태가 되어 탐지 범위 바깥의 적은 알렉스를 볼 수 없습니다.\n잠입 상태가 될 때, 탐지 범위 안에 적이 있으면 이동 속도가 증가합니다.\n알렉스는 착용 가능한 모든 무기의 숙련도가 동일하게 증가합니다\n근접 무기(톤파, 양손검)를 장착하면 체력(50/100/150)과 방어력(5/10/15)이 증가합니다."
+            },
+            "Q": {
+                "name": "코일건 / 기습",
+                "Detail": "알렉스가 코일건을 발사하여 적중한 적에게 40/80/120/160/200(+공격력의 30%)피해를 입힙니다.\n적중한 대상이 있다면 12초 동안 공격력이 4% 증가합니다. 이 효과는 최대 3회 중첩되며, 기습(근접 Q)과도 중첩됩니다.\n 알렉스가 대상에게 빠르게 돌진하여 30/65/100/135/170(+공격력의 30%)의 피해를 입힙니다.\n적중한 대상이 있다면 12초 동안 공격력이 4% 증가합니다. 이 효과는 최대 3회 중첩되며, 코일건(원거리 Q)과도 중첩됩니다."
+            },
+            "W": {
+                "name": "타겟 마커 / 플라즈마 마인",
+                "Detail": "알렉스가 지정한 지점에 타겟 마커를 발사하여 범위 안의 적들에게 40/60/80/100/120(+공격력의 30%)의 피해를 입히고, 대상의 시야를 1.6/1.8/2.0/2.2/2.4초 동안 제공받습니다.\n스킬이 적중되면 알렉스의 기본 공격 사거리가 1.6/1.8/2.0/2.2/2.4초 동안 1.5m만큼 증가합니다.\n알렉스가 지정한 지점에 플라즈마 마인을 발사하여 0.7초 후 범위 안의 적들에게 60/90/120/150/180(+공격력의 40%)의 피해를 입히고 중심부로 끌어당깁니다."
+            },
+            "E": {
+                "name": "펄스 스팅 / 교란",
+                "Detail": "지속 효과 : 알렉스의 공격속도가 3/6/9/12/15% 증가합니다.\n알렉스가 지정한 방향으로 펄스 스팅을 발사하여 적중한 대상에게 40/60/80/100/120(+공격력의 30%)의 피해를 입히고 이동속도를 70%만큼 느려지게 했다가 1.5초에 걸쳐 서서히 회복시킵니다.\n동시에, 반대 방향으로 빠르게 이동하며 즉시 잠입 상태가 됩니다.\n스킬 사용 후 잠입 상태를 1초 동안 유지하면, 무기를 한 번 변경할 수 있는 상태가 됩니다.\n 이 상태는 5초 동안 지속되며, 잠입이 해제되거나 무기를 변경하면 즉시 사라집니다.잠입 효과는 6레벨 이후에 적용됩니다.지속 효과 : 알렉스의 치명타 확률이 3/6/9/12/15% 증가합니다.\n알렉스가 5초 동안 유지되는 홀로그램 분신을 생성하고, 지정한 방향으로 빠르게 이동하며 즉시 잠입상태가 됩니다.\n홀로그램 분신은 범위 안의 적들에게 도발을 하여 1초 동안 자신을 공격하게 합니다.\n분신이 지속되는 동안 교란의 기본 지속 효과가 2배로 적용됩니다.\n스킬 사용 후 잠입 상태를 1초 동안 유지하면, 무기를 변경할 수 있는 상태가 됩니다. 이 상태는 5초 동안 지속되며, 잠입이 해제되거나 무기를 변경하면 즉시 사라집니다.\n잠입 효과는 6레벨 이후에 적용됩니다."
+            },
+            "R": {
+                "name": "정밀 폭격",
+                "Detail": "알렉스가 지정한 지점에 위성 미사일을 유도하여 범위 안의 적들에게 60/90/120 (+공격력의 40%)의 피해를 입히고, 중심부의 적들에게는 100/125/150(+공격력의 50%)의 피해를 입힙니다.모든 범위의 적중한 대상은 0.4초 동안 이동 속도가 40% 감소됩니다.이후 0.5초 간격으로 총 8회에 걸쳐 각각 40/60/80(+공격력의 30%)의 피해를 입히며, 중심부의 적들에게는 60/80/100(+공격력의 40%)의 피해를 입힙니다.\n 모든 범위의 적중한 대상은 0.4초 동안 이동 속도가 30% 감소됩니다."
             }
         },
 
