--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -215,7 +215,8 @@
         "아델라": "アデラ",
         "버니스": "バニス",
         "바바라": "バーバラ",
-        "알렉스": "アレックス"
+        "알렉스": "アレックス",
+        "수아": "スア"
     },
     "weapons": {
         "투척": "投げ", 
@@ -644,7 +645,10 @@
         "아그니": "アグニ",
         "천사의고리": "エンジェルヘイロー",
         "피스브링어": "ピースブリンガー",
-        "케르베로스": "ケロベロス"
+        "케르베로스": "ケロベロス",
+        "EMP드론": "EMP ドローン",
+        "정찰드론": "偵察 ドローン",
+        "아르기로톡소스": "アリュギュロトクソス"
 
     },
     "skill": {
@@ -1236,6 +1240,28 @@
             "R": {
                 "name": "精密爆撃",
                 "Detail": "アレックスが指定した位置に衛生ミサイルを誘導して範囲内の敵に60/90/120 (+攻撃力の 40%)のダメージを与え、中心部の敵には100/125/150(+攻撃力の 50%)のダメージを与えます。\nすべての範囲内の敵は0.4秒間移動速度が40％減少されます。\nその後、0.5秒ごとに8回、40/60/80(+攻撃力の 30%)のダメージを与え、中心部の敵には60/80/100(+攻撃力の 40%)のダメージを与えます。\nすべての範囲内の敵は0.4秒間移動速度が30％減少されます。"
+            }
+        },
+        "수아": {
+            "T": {
+                "name": "心の糧",
+                "Detail": "スアはスキルを使用すると心の糧を獲得し、次の基本攻撃が相手に強化ダメージを与え、与えたダメージの一部を体力に回復します。\n心の糧は重畳できます。\n重畳を保有した場合は攻撃速度が上昇します。\n心の糧で敵にダメージを与えるとすべてのスキルのクールダウンが減少します。\nnクールダウン減少効果はダメージを与えた対象の数と関係なく一回だけ適用されます。"
+            },
+            "Q": {
+                "name": "オデッセイ",
+                "Detail": "スアが指定した位置に2冊の本を生成してしばらくの後に中心部に本を引き寄せ、範囲内の敵にダメージを与え、栞を残します。\nn栞が残った対象に新しい栞を残すとダメージを与え、既存の栞は消えます。\nn本の衝突地点にいる敵はしばらくの間気絶します。"
+            },
+            "W": {
+                "name": "青い鳥",
+                "Detail": "味方や自分に使用すると青い鳥がスキルダメージを吸収し、阻止不可状態になるシールドを付けます。\n敵に使用すると青い鳥がダメージを与え、敵を失明させます。"
+            },
+            "E": {
+                "name": "ドン・キホーテ",
+                "Detail": "スアが武器をランスに変え、前方に突進して始めて的中した敵にダメージを与え、移動速度を減少させます\n。栞または気絶状態の敵には追加ダメージを与え、対象に空に浮かべます。"
+            },
+            "R": {
+                "name": "記憶力",
+                "Detail": "スアが最近読んだ本の内容を記憶して再び使用します。"
             }
         },
 
