수아 번역 추가

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -214,7 +214,8 @@
         "아델라": "아델라",
         "버니스": "버니스",
         "바바라": "바바라",
-        "알렉스": "알렉스"
+        "알렉스": "알렉스",
+        "수아": "수아"
     },
     "weapons": {
         "투척": "투척", 
