--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -216,7 +216,8 @@
         "버니스": "バニス",
         "바바라": "バーバラ",
         "알렉스": "アレックス",
-        "수아": "スア"
+        "수아": "スア",
+        "레온": "レオン"
     },
     "weapons": {
         "투척": "投げ", 
@@ -648,7 +649,9 @@
         "케르베로스": "ケロベロス",
         "EMP드론": "EMP ドローン",
         "정찰드론": "偵察 ドローン",
-        "아르기로톡소스": "アリュギュロトクソス"
+        "아르기로톡소스": "アリュギュロトクソス",
+        "사격교본": "射撃教本",
+        "호크아이": "ホークアイ"
 
     },
     "skill": {
@@ -1257,11 +1260,33 @@
             },
             "E": {
                 "name": "ドン・キホーテ",
-                "Detail": "スアが武器をランスに変え、前方に突進して始めて的中した敵にダメージを与え、移動速度を減少させます\n。栞または気絶状態の敵には追加ダメージを与え、対象に空に浮かべます。"
+                "Detail": "スアが武器をランスに変え、前方に突進して始めて的中した敵にダメージを与え、移動速度を減少させます。\n栞または気絶状態の敵には追加ダメージを与え、対象に空に浮かべます。"
             },
             "R": {
                 "name": "記憶力",
                 "Detail": "スアが最近読んだ本の内容を記憶して再び使用します。"
+            }
+        },
+        "레온": {
+            "T": {
+                "name": "人間魚雷、水中強打",
+                "Detail": "人間魚雷 : レオンが水たまりの上にいると移動速度が5/10/15%, 攻撃速度が10/15/20% 上昇します。\n水中強打 : レオンが水たまりを上にいると基本攻撃ダメージ量が5/10/15(+攻撃力の20%) 追加されます。"
+            },
+            "Q": {
+                "name": "水路 ",
+                "Detail": "レオンが一直線上に水たまりを生成し敵に40/75/110/145/180(+攻撃力の40%)のダメージを与え水路を作ります。"
+            },
+            "W": {
+                "name": "水沫強打",
+                "Detail": "持続効果 : 5回目の攻撃ごとにダメージを与えた対象の位置に水たまりを生成します。\nレオンが自分または味方に5秒間60/90/120/150/180(+攻撃力の30%)のダメージを吸収するシールドを付与します。シールドが付与されたら次の３回の一般攻撃が敵に10/20/30/40/50(+攻撃力の30%)の追加ダメージを与え、敵の後ろに水たまりを生成します。"
+            },
+            "E": {
+                "name": "潜水泳法",
+                "Detail": "レオンが即時自分の位置に水たまりを生成してダイビングします。ダイビング後には指定した水たまりから出て、 60/100/140/180/220(+攻撃力の35%)のダメージと1秒間のエアボーンを与えます。"
+            },
+            "R": {
+                "name": "波乗り",
+                "Detail": "レオンが波を召喚します。レオンは波に乗って前進し、経路上の敵に150/230/310(+攻撃力の50%)のダメージを与え、敵は波が無くなる瞬間まで押し出されます。\n押し出された敵が壁にぶつかると失った体力の10/15/20% に該当するダメージを与え、移動速度が70%減少され1.2秒間移動速度が次第に回復されます。"
             }
         },
 
