--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -215,7 +215,8 @@
         "버니스": "버니스",
         "바바라": "바바라",
         "알렉스": "알렉스",
-        "수아": "수아"
+        "수아": "수아",
+        "레온": "레온"
     },
     "weapons": {
         "투척": "투척", 
@@ -648,7 +649,9 @@
         "케르베로스": "케르베로스",
         "EMP드론": "EMP드론",
         "정찰드론": "정찰드론",
-        "아르기로톡소스": "아르기로톡소스"
+        "아르기로톡소스": "아르기로톡소스",
+        "사격교본": "사격교본",
+        "호크아이": "호크아이"
     },
     "skill": {
         "아야": {
@@ -1265,6 +1268,28 @@
             "R": {
                 "name": "기억력",
                 "Detail": "한 번 읽은 책의 내용을 전부 기억하는 수아는 가장 최근에 사용한 스킬을 다시 기억하여 사용합니다."
+            }
+        },
+        "레온": {
+            "T": {
+                "name": "인간 어뢰, 수중 강타",
+                "Detail": "인간 어뢰 : 레온이 물 웅덩이 위에 있으면 이동속도가 5/10/15%, 공격속도가 10/15/20% 상승합니다.\n 수중 강타 : 레온이 물 웅덩이 위에 있으면 기본 공격 피해량이 5/10/15(+공격력의 20%) 추가됩니다."
+            },
+            "Q": {
+                "name": "물길",
+                "Detail": "레온이 물 웅덩이를 일직선으로 설치하며 적들에게 40/75/110/145/180(+공격력의 40%)의 피해를 입히고 물길을 만듭니다."
+            },
+            "W": {
+                "name": "물보라 강타",
+                "Detail": "지속 효과 : 5번째 공격마다 피해를 입힌 대상의 위치에 물 웅덩이를 생성합니다.\n레온이 자신 또는 아군에게 5초 동안 60/90/120/150/180(+공격력의 30%)의 피해를 흡수하는 보호막을 부여합니다. 보호막이 부여되면 다음 3번의 일반공격이 적에게 10/20/30/40/50(+공격력의 30%)의 추가 피해를 입히며 적 뒤에 물 웅덩이를 생성합니다."
+            },
+            "E": {
+                "name": "잠영",
+                "Detail": "레온이 즉시 자신의 위치에 물 웅덩이를 생성하고 다이빙합니다. \n다이빙 후에는 지정한 물 웅덩이로 나오며 60/100/140/180/220(+공격력의 35%)의 피해와 1초 동안 에어본을 줍니다."
+            },
+            "R": {
+                "name": "파도타기",
+                "Detail": "레온이 파도를 소환합니다. 레온은 파도를 타고 같이 전진하며 경로상 적들에게 150/230/310(+공격력의 50%)의 피해를 입히고 적은 파도가 없어지는 순간까지 같이 밀려납니다. \n파도에 밀려난 적이 벽에 부딪히면 잃은 체력에 10/15/20% 피해를 입히고 이동속도가 70%감소되며 1.2초 동안 이동속도가 서서히 회복합니다."
             }
         },
 
