신규 캐릭 일레븐 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -217,7 +217,8 @@
         "바바라": "バーバラ",
         "알렉스": "アレックス",
         "수아": "スア",
-        "레온": "レオン"
+        "레온": "レオン",
+        "일레븐": "Eleven"
     },
     "weapons": {
         "투척": "投げ", 
@@ -651,7 +652,14 @@
         "정찰드론": "偵察 ドローン",
         "아르기로톡소스": "アリュギュロトクソス",
         "사격교본": "射撃教本",
-        "호크아이": "ホークアイ"
+        "호크아이": "ホークアイ",
+        "레드팬서": "レッドパンサー",
+        "빛의검": "光の剣",
+        "에스톡": "エストック",
+        "저거너트": "ジャガンナート",
+        "제베의활": "ジェベの矢",
+        "제사장의예복": "祭司長の礼服",
+        "턱시도": "タキシード"
 
     },
     "skill": {
@@ -1287,6 +1295,28 @@
             "R": {
                 "name": "波乗り",
                 "Detail": "レオンが波を召喚します。レオンは波に乗って前進し、経路上の敵に150/230/310(+攻撃力の50%)のダメージを与え、敵は波が無くなる瞬間まで押し出されます。\n押し出された敵が壁にぶつかると失った体力の10/15/20% に該当するダメージを与え、移動速度が70%減少され1.2秒間移動速度が次第に回復されます。"
+            }
+        },
+        "일레븐": {
+            "T": {
+                "name": "一緒に食べようか？",
+                "Detail": "Elevenはハンバーガーとポテトフライを調合して 880の体力が回復できるElevenセット二つを製作できます。\n基本攻撃速度が10%遅い代わりに、基本攻撃の時10/15/20の追加ダメージを与えます。\n基本攻撃を4回すると50/150/250の体力をすぐ回復して、その後8秒間、1秒ごとに20の体力を回復するハンバーガーを生成します。\nハンバーガーを獲得すると次の一般スキルを1回強化し、このハンバーガーは敵に踏まれると破壊されます。\nハンバーガーはチーム員の数に影響されず、ゲームのモードによって生成の数が決まります。\nハンバーガーを獲得すると回復のバフが手に入り、そのバフの持続時間中には再獲得できません。"
+            },
+            "Q": {
+                "name": "召し上がれ！",
+                "Detail": "Elevenがハンバーガーのフォークで 前方の敵に100/130/160/190/220(+攻撃力の50%)のダメージを与えます。\n1秒以上のチャージ状態を維持した後にスキルを使用すると、追加で48%/52%/56%/60%/64%のダメージを与えて、2秒間移動速度を20%/25%/30%/35%/40%遅くします。\nチャージ状態は最大3秒間維持できます。チャージ中には移動速度が20%減少します。"
+            },
+            "W": {
+                "name": "みんな集中！",
+                "Detail": "Elevenがハンバーガーのフォークを持ち上げて周りの範囲内の敵を挑発して0.6/0.7/0.8/0.9/1.0秒間自分を攻撃するようにします。\n1秒以上のチャージ状態を維持した後にスキルを使用すると、もっと広い範囲の敵を挑発して1.0 / 1.2 / 1.4 / 1.6 / 1.8秒間自分を攻撃するようにします。\nチャージ状態は最大3秒間維持できます。チャージ中には移動速度が20% 減少します"
+            },
+            "E": {
+                "name": "On Air!",
+                "Detail": "Elevenがハンバーガーのに乗って阻止不可の状態になり、指定された所にジャンプして敵に110/130/150/180/210(+攻撃力35%)と失った体力の10/12/14/16/18%のダメージを与えます。チャージすればするほど移動できる距離がだんだん長くなります。\n1秒以上のチャージ状態を維持した後にスキルを使用すると、22% / 24% / 26% / 28% /30%の追加ダメージを与えて追い出します。\nチャージ状態は最大3秒間維持できます。チャージ中には移動できません。"
+            },
+            "R": {
+                "name": "カロリーシールド ",
+                "Detail": "６秒間Elevenの周りにポテトフライが 回転し、1秒ごとに範囲内の敵に50/80/110のダメージを与えます。\n持続時間中にElevenが基本攻撃をすると1回の追加攻撃をして、次の一般スキルが強化されます。"
             }
         },
 
