--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -216,7 +216,8 @@
         "바바라": "바바라",
         "알렉스": "알렉스",
         "수아": "수아",
-        "레온": "레온"
+        "레온": "레온",
+        "일레븐": "일레븐"
     },
     "weapons": {
         "투척": "투척", 
@@ -649,9 +650,13 @@
         "케르베로스": "케르베로스",
         "EMP드론": "EMP드론",
         "정찰드론": "정찰드론",
-        "아르기로톡소스": "아르기로톡소스",
-        "사격교본": "사격교본",
-        "호크아이": "호크아이"
+        "레드팬서": "레드팬서",
+        "빛의검": "빛의검",
+        "에스톡": "에스톡",
+        "저거너트": "저거너트",
+        "제베의활": "제베의활",
+        "제사장의예복": "제사장의예복",
+        "턱시도": "턱시도"
     },
     "skill": {
         "아야": {
@@ -1290,6 +1295,28 @@
             "R": {
                 "name": "파도타기",
                 "Detail": "레온이 파도를 소환합니다. 레온은 파도를 타고 같이 전진하며 경로상 적들에게 150/230/310(+공격력의 50%)의 피해를 입히고 적은 파도가 없어지는 순간까지 같이 밀려납니다. \n파도에 밀려난 적이 벽에 부딪히면 잃은 체력에 10/15/20% 피해를 입히고 이동속도가 70%감소되며 1.2초 동안 이동속도가 서서히 회복합니다."
+            }
+        },
+        "일레븐": {
+            "T": {
+                "name": "힘내자고!",
+                "Detail": "일레븐은 햄버거와 감자튀김을 조합하여 880의 체력이 회복되는 일레븐 세트를 2개 제작할 수 있습니다.기본 공격 속도가 10% 느린 대신 기본 공격을 할 때마다 10/15/20의 추가 피해를 입힙니다.\n기본 공격을 4회 할 때마다 50/150/250의 체력을 즉시 회복하고, 이후 8초 동안 매 초마다 20의 체력을 회복하는 햄버거를 생성합니다.\n햄버거를 획득하면 다음 일반 스킬을 1회 즉시 차징 상태로 사용할 수 있으며, 적이 햄버거를 밟으면 사라집니다.\n햄버거는 듀오, 스쿼드 모드에서 각각 1개, 2개가 추가로 생성 됩니다.\n햄버거 습득 시 회복 버프를 얻게되며, 해당 버프 지속 시간 동안은 재습득 할수 없습니다."
+            },
+            "Q": {
+                "name": "방해하지마!",
+                "Detail": "일레븐이 햄버거 포크로 전방의 적들에게 100/130/160/190/220(+공격력의 50%)의 피해를 입힙니다.\n 1초 이상 차징 상태를 유지한 후 스킬을 사용하면 추가로 48%/52%/56%/60%/64%의 피해를 입히며, 2초 동안 이동 속도를 20%/25%/30%/35%/40% 느려지게 합니다. \n차징 상태는 최대 3초 동안 유지할 수 있으며, 차징하는 동안 이동 속도가 20% 감소됩니다."
+            },
+            "W": {
+                "name": "자~ 집중!",
+                "Detail": "일레븐이 햄버거 포크를 번쩍 들어 올리며 주변 범위 안의 적들을 도발하여 0.6/0.7/0.8/0.9/1.0초 동안 자신을 공격하게 합니다.\n1초 이상 차징 상태를 유지한 후 스킬을 사용하면 더 넓은 범위의 적들을 도발하여 1.0 / 1.2 / 1.4 / 1.6 / 1.8초 동안 자신을 공격하게 합니다.\n차징 상태는 최대 3초 동안 유지할 수 있으며, 차징하는 동안 이동 속도가 20% 감소됩니다."
+            },
+            "E": {
+                "name": "나 불렀어?",
+                "Detail": "일레븐이 햄버거를 타고 저지 불가 상태가 되어 지정한 지점으로 점프 이동하여 적들에게 110/130/150/180/210(+공격력의 35%)과 잃은 체력의 10/12/14/16/18% 만큼의 피해를 입힙니다. \n차징을 할수록 이동할 수 있는 거리가 점점 길어집니다.\n 1초 이상 차징 상태를 유지한 후 스킬을 사용하면 22% / 24% / 26% / 28% /30%의 추가 피해를 입히고 밀어냅니다.\n차징 상태는 최대 3초 동안 유지할 수 있으며, 차징하는 동안 이동을 할 수 없습니다."
+            },
+            "R": {
+                "name": "다 덤벼보라구!",
+                "Detail": "6초 동안 일레븐의 주변에 감자튀김이 회전하며 매 초마다 범위 안의 적들에게 50/80/110의 피해를 입힙니다.\n 지속 시간 동안 일레븐이 기본 공격을 할 때마다 1회의 추가 공격을 하며, 스킬을 사용하고 다음 일반 스킬을 1회 즉시 차징 상태로 사용할 수 있습니다."
             }
         },
 
