시즌 수정 용의하게 변경 시즌 2 대응

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -15,6 +15,7 @@
     "weapon": "무기",
     "ranking": "랭킹",
     "season": "시즌",
+    "freeseason": "프리 시즌",
     "rank": "순위",
     "avgRank": "평균순위",
     "item": "아이템",
