--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -16,6 +16,7 @@
     "ranking": "Rank",
     "rank": "Rank",
     "season": "S",
+    "freeseason": "PS",
     "avgRank": "RankMedio",
     "item": "Itens",
     "solo": "SOLO",
