--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -16,6 +16,7 @@
     "ranking": "排名",
     "rank": "排名",
     "season": "S",
+    "freeseason": "PS",
     "avgRank": "平均-排名",
     "item": "物品",
     "solo": "单人",
