--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -16,6 +16,7 @@
     "ranking": "Rank",
     "rank": "Rank",
     "season": "S",
+    "freeseason": "PS",
     "avgRank": "avgRank",
     "item": "Item",
     "solo": "SOLO",
